<resources>
    <string name="app_name">House</string>
    <string name="navBar_home">Home</string>
    <string name="navBar_tasks">Tasks</string>
    <string name="navBar_houses">Houses</string>
    <string name="navBar_settings">Settings</string>
    <string name="email_placeholder">Enter Email</string>
    <string name="password_placeholder">Enter Password</string>
    <string name="button_signIn">Sign In</string>
    <string name="signIn_title">Sign In</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="forgotPassword_login"><u>Forgot Password?</u></string>

    <!-- Strings related to Home Page -->
    <string name="welcome_home">Welcome Home!</string>
    <string name="my_tasks">My Tasks</string>
    <string name="view_tasks">View Tasks</string>
    <string name="my_houses">My Houses</string>
    <string name="view_houses">View Houses</string>
    <string name="settings_button">Settings</string>
    <string name="logout_button">Logout</string>
    <string name="newAccountPrompt">Are you new here?</string>
    <string name="createAccountBtn">Create a new Account</string>


    <!-- Strings related to Create Account Fragment -->
    <string name="createAccount_title">Create Account</string>
    <string name="createAccount_name">Display Name:</string>
    <string name="createAccount_name_prompt">Enter Name</string>
    <string name="createAccount_email">Email:</string>
    <string name="createAccount_email_prompt">Enter Email</string>
    <string name="createAccount_password">Password:</string>
    <string name="createAccount_password_prompt">Enter Password</string>
    <string name="createAccount_password_rule">Password Must be at least 6 characters</string>
    <string name="createAccount_submit">Create Account</string>
    <string name="createAccount_cancel">Cancel</string>


    <!-- Strings related to Houses Page -->
    <string name="my_houses_title">My Houses</string>
    <string name="all_tasks">All Tasks</string>
    <string name="house1_name"> House 1 Name</string>
    <string name="house1_description">House 1 Description. What happens if I write a long description does it hold?</string>
    <string name="house1_members_list">Bob, George, Ralph, Alpha, Beta, Gamma, Zeta, Do, Re, Mi</string>
    <string name="house1_members_title">Members:</string>
    <string name="house1_task1_title">Task 1:</string>
    <string name="house1_task1_name">I am the name of task 1</string>
    <string name="house1_due_date_title">Due Date</string>
    <string name="house1_task1_due_date">1 Day</string>

    <string name="house1_task2_title">Task 2:</string>
    <string name="house1_task2_name">I am the name of task 2</string>
    <string name="house1_task2_due_date">2 Days</string>

    <string name="house1_task3_title">Task 3:</string>
    <string name="house1_task3_name">I am the name of task 3</string>
    <string name="house1_task3_due_date">3 Days</string>

    <string name="house2_name"> House 2 Name</string>
    <string name="house2_description">House 2 Description. What happens if I write a long description does it hold?</string>
    <string name="house2_members_list">Bob, George, Ralph, Alpha, Beta, Gamma, Zeta, Do, Re, Mi</string>
    <string name="house2_members_title">Members:</string>
    <string name="house2_task1_title">Task 1:</string>
    <string name="house2_task1_name">I am the name of task 1</string>
    <string name="house2_due_date_title">Due Date</string>
    <string name="house2_task1_due_date">1 Day</string>

    <string name="house2_task2_title">Task 2:</string>
    <string name="house2_task2_name">I am the name of task 2</string>
    <string name="house2_task2_due_date">2 Days</string>

    <string name="house2_task3_title">Task 3:</string>
    <string name="house2_task3_name">I am the name of task 3</string>
    <string name="house2_task3_due_date">3 Days</string>

    <string name="leave_house">Leave House</string>
    <string name="house3_name"> House 3 Name</string>


    <!-- Strings related to Settings Page -->
    <string name="my_settings_title">My Settings</string>
    <string name="account_settings_title">Account Settings</string>
    <string name="display_name_title">Display Name:</string>
    <string name="display_name_hint">Name:</string>
    <string name="email_title">Email:</string>
    <string name="email_hint">Email:</string>
    <string name="notification_settings_title">Notifications</string>
    <string name="notification_button_ON">ON</string>
    <string name="notification_button_OFF">OFF</string>
    <string name="resetPassword_title">Reset Password</string>
    <string name="reset_password_button">Send Email</string>
    <string name="save_button">Save</string>
    <string name="setting_logout_button">Logout</string>
    <string name="feedback_title">Feedback</string>
    <string name="feedback_hint">Help Us Improve! Provide Feedback Here</string>
    <string name="give_feedback_button">Submit Feedback</string>

    <string name="add_house_button_title">Build New House</string>

    <!-- Strings related to Tasks Page -->
    <string name="my_tasks_title">My Tasks</string>
    <string name="new_task_title">New Task</string>
    <string name="toApprove_title">To Approve</string>
    <string name="overdue_title">Overdue</string>
    <string name="due_today_title">Due today</string>
    <string name="due_this_week_title">Due this week</string>
    <string name="due_this_month_title">Due this month</string>
    <string name="due_later_title">Due later</string>
    <string name="completed_title">Completed</string>
    <string name="extend_button">Extend</string>
    <string name="due_date_1">Nov 6</string>
    <string name="due_date_2">Nov 16</string>
    <string name="due_date_3">Nov 26</string>

    <!-- Strings related to New Houses -->
    <string name="save_new_house_button_title">SAVE NEW HOUSE</string>
    <string name="new_house_name">New House Name</string>
    <string name="newHouse_members">Members will show up here</string>
    <string name="new_house_description">House Description: </string>
    <string name="new_house_punish_mult_title">House Punishment per task: </string>
    <string name="new_house_punish_mult"> 1 </string>
    <string name="new_house_notification_schedule_title">Notifications: </string>
    <string name="new_house_notification_sched">None, Weekly, or Monthly. Default: None</string>
    <string name="view_house_button">View House</string>

    <!-- Strings related to New Task -->
    <string name="viewTask_back">Back</string>
    <string name="viewTask_edit">Edit</string>
    <string name="editTask_title">Edit Task</string>
    <string name="save_new_task_button_title">CREATE</string>
    <string name="task_delete">Delete</string>
    <string name="new_task_hint_title">Title</string>
    <string name="new_task_description">Description</string>
    <string name="new_task_hint_description">Description</string>
    <string name="new_task_notifications">Notifications</string>
    <string name="new_task_tag">Tag</string>
    <string name="new_task_list">List</string>
    <string name="new_task_due_date">Due Date</string>
    <string name="new_task_assignee">Task Assignee</string>
    <string name="house_name">House Name</string>
    <string name="back">Back</string>
    <string name="edit">Edit</string>
    <string name="balance_outstanding">Balance Outstanding ($)</string>
    <string name="members">Members</string>
    <string name="house_description">House Description</string>
    <string name="voting">Voting</string>
    <string name="toggle_notification_button">OFF</string>

    <!-- Strings related to Displaying House Members -->
    <string name="name1">Name1</string>
    <string name="view_house_member_amount_owed">Amount Owed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_house_name">Name</string>
    <string name="edit_house_admin_status_title">Admin Status</string>
    <string name="view_house_max_members_in_house">Max Members in house:</string>
    <string name="edit_house_punishment_multiplier">Punishment Multiplier:</string>
    <string name="edit_house_punishment_mult_default">1</string>
    <string name="edit_house_max_members_default">0</string>
    <string name="my_houses_join_house_button">Join A House</string>

</resources>
