<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_blue"
    tools:context=".House">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_blue"
        android:orientation="vertical">

        <TableRow
            android:id="@+id/new_house_row1"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@color/light_blue">

            <TextView
                android:id="@+id/house1_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/house1_name"
                android:textIsSelectable="false"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:id="@+id/new_house_row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue">

            <EditText
                android:id="@+id/house1_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/house1_description"
                android:importantForAutofill="no" />
        </TableRow>

        <TableRow
            android:id="@+id/new_house_row7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue">

            <TextView
                android:id="@+id/new_house_members_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house1_members_title" />

            <TextView
                android:id="@+id/new_house_members_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/house1_members_list" />
        </TableRow>

        <TableRow
            android:id="@+id/house1_row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue">

            <TextView
                android:id="@+id/house1_task1_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house1_task1_title" />

            <TextView
                android:id="@+id/house1_task1_name"
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/house1_task1_name" />

            <TextView
                android:id="@+id/house1_due_date_title"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:text="@string/house1_due_date_title" />

            <TextView
                android:id="@+id/house1_task1_due_date"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/house1_task1_due_date" />
        </TableRow>

        <TableRow
            android:id="@+id/house1_row5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue">

            <TextView
                android:id="@+id/house1_task2_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house1_task2_title" />

            <TextView
                android:id="@+id/house1_task2_name"
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/house1_task2_name" />

            <TextView
                android:id="@+id/house1_due_date_title2"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:text="@string/house1_due_date_title" />

            <TextView
                android:id="@+id/house1_task2_due_date2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/house1_task2_due_date" />

        </TableRow>

        <TableRow
            android:id="@+id/house1_row6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue">

            <TextView
                android:id="@+id/house1_task3_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house1_task3_title" />

            <TextView
                android:id="@+id/house1_task3_name"
                android:layout_width="165dp"
                android:layout_height="match_parent"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/house1_task3_name" />

            <TextView
                android:id="@+id/house1_due_date_title3"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:text="@string/house1_due_date_title" />

            <TextView
                android:id="@+id/house1_task3_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/house1_task3_due_date" />

        </TableRow>

        <TableRow
            android:id="@+id/new_house_row7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_blue">

            <Button
                android:id="@+id/new_house_save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/leave_house" />
        </TableRow>

        <TextView
            android:id="@+id/spacer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />

    </LinearLayout>

</FrameLayout>