<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewHouseFrag">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/medium"
        android:orientation="vertical">

        <TextView
            android:id="@+id/spacer3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />

        <TableRow
            android:id="@+id/new_house_row1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/new_house_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="New House Name"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:id="@+id/new_house_row2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/new_house_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/new_house_description"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/new_house_row3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/new_house_members_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house1_members_title"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/new_house_members_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/newHouse_members"
                android:textColor="@color/black" />
        </TableRow>

        <TableRow
            android:id="@+id/new_house_row4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/new_house_punish_mult_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_house_punish_mult_title"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/new_house_punish_mult"
                android:layout_width="231dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/new_house_punish_mult"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:id="@+id/new_house_row5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/new_house_notification_sched_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_house_notification_schedule_title"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/new_house_notification_sched"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/new_house_row7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/new_house_save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_new_house_button_title" />
        </TableRow>

        <TextView
            android:id="@+id/spacer2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" />

    </LinearLayout>
</FrameLayout>